[CHANGE] Pressing F4 when the F4 menu is already open, closes it.
[CHANGE] Lock pick appearance(I also fixed the error with ActIndex("Crowbar") isn't set)
[CHANGE] Merged Simple RP Prop protection with DarkRP
[CHANGE] Put the contents folder in DarkRP with the earthquake sound
[CHANGE] Settings now save when a convar is changed instead of every minute.
[FIX] When use protection is on, doors couldn't be opened by some people, now they can.
[FIX] Rare error with dropweapon
[FIX] Exploit with shipments: Exploding them with more than one explosive would make them spawn more guns than usual.
[FIX] Exploit with wire nailer
[FIX] Exploit that you can duplicate weapons(I made sure that you can't use toolgun on weapons AND I made sure you can't spawn saved weapons works on both normal dup and adv. dup)
[FIX] Bug that even if hungermod was off, food would still cost money.
[FIX] Gravgun punt punting far
[FIX] Not being able to use druglabs/money printers/whatever
[FIX] Vote screens being able to be there forever
[FIX] The save system not saving everything
[FIX] When looking at an item/door, the text won't be shaky anymore!
[FIX] Attempt to fix playerinitialspawn lag
[FIX] Attempt to fix walk speed lag
[FIX] /dropmoney text exploit
[FIX] The vote system was fucked, I completely renewed it(I now use Derma) and HOPEFULLY every shit problem you guys had with it is fixed!
[FIX] Prices etc. resetting to 0
[FIX] HUGE FUCKING MAJOR EXPLOIT where you enter a console command after doing /votecop or /votemayor and just become a cop without anyone voting yes.
[FIX] The ability of people to somehow get <nothing> as RP name(Always happened with bots too)
[FIX] People being able to get less than 0 money. DarkRP just doesn't work with depts 
[FIX] rp_grant and rp_revoke not working properly, Philxyz fucked the caching system up(Phil look at my code to fix it for your release :D)
[FIX] Demote: the demoter can't vote anymore now.